query-editor: Make IMs process the fake event we generate at first

Input methods will typically only process events after getting focus.

https://bugzilla.gnome.org/show_bug.cgi?id=696260